final changes and updated design

--- a/frontend/src/components/EditImageForm/EditImageForm.css
+++ b/frontend/src/components/EditImageForm/EditImageForm.css
@@ -1,17 +1,21 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,700);
+
 /* body {
   display: flex;
   height: 100vh;
   justify-content: center;
   align-items: center;
-  background: #c0392b;
+  background: #3FC1C9;
   font-family: Raleway;
   color: white;
   letter-spacing: 1px;
 } */
 
-.card-form {
-  display: inline-block;
+.card-form-edit {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   margin-bottom: 30px;
   width: 500px;
   border-radius: 10px;
@@ -19,7 +23,7 @@
   box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
     0 17px 17px 0 rgba(0, 0, 0, 0.15);
 }
-.card-form .form-title {
+.card-form-edit .form-title {
   width: 100%;
   display: flex;
   align-items: center;
@@ -31,15 +35,15 @@
   background: #52616B;
   border-radius: 10px 10px 0 0;
 }
-.card-form .form-body {
+.card-form-edit .form-body {
   padding: 10px;
 }
-.card-form .form-body .row {
+.card-form-edit .form-body .row {
   display: flex;
   justify-content: space-around;
   padding: 10px;
 }
-.card-form .form-body .row input[type="text"] {
+.card-form-edit .form-body .row input[type="text"] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -54,16 +58,17 @@
   color: #576366;
   font-size: 14px;
 }
-.card-form .rule {
+.card-form-edit .rule {
   height: 2px;
   background: #e8ebed;
   margin: 0px 35px;
 }
-.card-form .form-footer {
+.card-form-edit .form-footer {
+  text-align: center;
   margin: 0 25px 15px 25px;
   padding: 15px 10px;
 }
-.card-form .form-footer button {
+.card-form-edit .form-footer button {
   display: inline-block;
   height: 40px;
   width: 30%;
@@ -77,7 +82,7 @@
   transition: 0.5s ease;
 }
 
-.card-form .form-footer button:hover {
-    height: 50px;
-    width: 32%;
+.card-form-edit .form-footer button:hover {
+  height: 50px;
+  width: 32%;
 }
