--- a/frontend/src/components/ImageGallery/ImageGallery.css
+++ b/frontend/src/components/ImageGallery/ImageGallery.css
@@ -1,131 +1,184 @@
-
 *,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}   
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-h1, h2 {
-    font: inherit;
+h1,
+h2 {
+  font: inherit;
 }
 
 body {
-    font:16px/1.2 'Poppins', sans-serif;
-    background: 
-    linear-gradient(45deg, hsl(236, 100%, 80%,.4), rgba(205,155,225,.3));
+  font: 16px/1.2 "Poppins", sans-serif;
+  background: linear-gradient(
+    45deg,
+    hsl(236, 100%, 80%, 0.4),
+    rgba(205, 155, 225, 0.3)
+  );
 }
 
 .gallery {
-    --anim-time--hi: 266ms;
-    --anim-time--med: 400ms;
-    --anim-time--lo: 600ms;
-
-    display: flex;
-    place-content: center;
-    max-width: clamp(30rem, 95%, 50rem);
-    width: max(22.5rem, 100%);
-    min-height: 100vh;
-    margin-inline: auto;
-    padding: clamp(0px, (30rem  - 100vw) * 9999, 1rem);
-   
+  --anim-time--hi: 266ms;
+  --anim-time--med: 400ms;
+  --anim-time--lo: 600ms;
+    /* position: absolute; */
+  display: flex;
+  place-content: center;
+  max-width: clamp(30rem, 95%, 50rem);
+  width: max(22.5rem, 100%);
+  min-height: 100vh;
+  margin-inline: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: clamp(0px, (30rem - 100vw) * 9999, 1rem);
+  align-items: center;
 }
 
 .gallery__content--flow {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
-.gallery__content--flow > *  {
-    flex-grow: 1;
-    flex-basis: calc((30rem - 100%) * 999);
+.gallery__content--flow > * {
+  flex-grow: 1;
+  flex-basis: calc((30rem - 100%) * 999);
 }
 
 figure {
-    display: flex;
-    min-width: 14rem;
-    max-height: 16rem;
-    position: relative;
-    border-radius: .35rem;
-    box-shadow:
-    rgb(40, 40, 40, 0.1) 0px 2px 3px,
-    rgb(20, 20, 20, 0.2) 0px 5px 8px,
+  display: flex;
+  min-width: 14rem;
+  max-height: 16rem;
+  position: relative;
+  border-radius: 0.35rem;
+  box-shadow: rgb(40, 40, 40, 0.1) 0px 2px 3px, rgb(20, 20, 20, 0.2) 0px 5px 8px,
     rgb(0, 0, 0, 0.25) 0px 10px 12px;
-    overflow: hidden;
-    transition: transform var(--anim-time--med) ease;
+  overflow: hidden;
+  transition: transform var(--anim-time--med) ease;
 }
 
 figure::before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    background: linear-gradient(
-        to top,
-        hsla(0, 0%, 0%, 0.8) 0%,
-        hsla(0, 0%, 0%, 0.7) 12%,
-        hsla(0, 0%, 0%, 0.2) 41.6%,
-        hsla(0, 0%, 0%, 0.125) 50%,
-        hsla(0, 0%, 0%, 0.01) 59.9%,
-        hsla(0, 0%, 0%, 0) 100%
-    );
-    opacity: 0;
-    transition-property: opacity, transform;
-    transition-duration: var(--anim-time--med), var(--anim-time--med);
-    transition-timing-function: ease, ease;
-      z-index: 4;
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(
+    to top,
+    hsla(0, 0%, 0%, 0.8) 0%,
+    hsla(0, 0%, 0%, 0.7) 12%,
+    hsla(0, 0%, 0%, 0.2) 41.6%,
+    hsla(0, 0%, 0%, 0.125) 50%,
+    hsla(0, 0%, 0%, 0.01) 59.9%,
+    hsla(0, 0%, 0%, 0) 100%
+  );
+  opacity: 0;
+  transition-property: opacity, transform;
+  transition-duration: var(--anim-time--med), var(--anim-time--med);
+  transition-timing-function: ease, ease;
+  z-index: 4;
 }
 
 .header__caption {
-    z-index: 10;
-    position: absolute;
-    display: inline-flex;
-    flex-direction: column;
-    align-self: flex-end;
-    width: 100%;
-    gap: 0.5rem;
-    padding: 1rem;
-    justify-content: center;
-    text-align: center;
-    transform: translateY(100%);
-    transition: transform var(--anim-time--hi) linear,
+  z-index: 10;
+  position: absolute;
+  display: inline-flex;
+  flex-direction: column;
+  align-self: flex-end;
+  width: 100%;
+  gap: 0.5rem;
+  padding: 1rem;
+  justify-content: center;
+  text-align: center;
+  transform: translateY(100%);
+  transition: transform var(--anim-time--hi) linear,
     opacity var(--anim-time--hi) linear;
 }
 
 figure:hover::before {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 figure:hover .header__caption {
-    transform: translateY(0);
-    opacity: 1;
+  transform: translateY(0);
+  opacity: 1;
 }
-figure:hover img{
-    transform: scale(1);
+figure:hover img {
+  transform: scale(1);
 }
 .title {
-    color: #fff;
-    
+  color: #fff;
 }
 
 .title--primary {
-    font-size: 1.25rem;
-    font-weight: bold;
+  font-size: 1.25rem;
+  font-weight: bold;
 }
 
 .title--secondary {
-    text-transform:uppercase;
-    font-weight: bold;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 img {
-    display: block;
-    width: 100%;
-    object-fit: cover;
-    object-position: center;
-    height: 100%;
+  display: block;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+  height: 100%;
   transform: scale(1.15);
-    aspect-ratio: 16 / 13;
-    transition: 400ms ease-in-out;
+  aspect-ratio: 16 / 13;
+  transition: 400ms ease-in-out;
+}
+
+.paginationBox {
+  display: block;
+  justify-content: center;
+  margin: 6vmax;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+}
+
+.page-item {
+  background-color: #C9D6DF;
+  list-style: none;
+  border: 1px solid rgba(0, 0, 0, 0.178);
+  padding: 1vmax 1.5vmax;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+.page-item:first-child {
+  border-radius: 5px 0 0 5px;
+}
+
+.page-item:last-child {
+  border-radius: 0 5px 5px 0;
+}
+.page-link {
+  text-decoration: none;
+  font: 300 0.7vmax "Roboto";
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: rgb(80, 80, 80);
+  transition: all 0.3s;
+}
+
+.page-item:hover {
+  background-color: #9aa4ac;
+}
+
+.page-item:hover .page-link {
+  color: rgb(0, 0, 0);
+}
+
+.pageItemActive {
+  background-color: #1E2022;
+}
+
+.pageLinkActive {
+  color: white;
 }
